# flare-core

./: Cargo.toml  LICENSE  README.md
certs/: server.crt  server.key
docs/: architecture_redesign_proposal.md  client_architecture.md  client_configuration.md  client_examples_summary.md  client_refactor_summary.md  client_server_integration.md  client_server_integration_guide.md  connection_refactor_summary.md  dual_cert_summary.md  examples_cleanup_summary.md  message_flow_simplification.md  project_completion_summary.md  refactoring_progress.md  simplified_config_summary.md  tls_configuration.md  tls_configuration_summary.md  tls_summary.md  websocket_handshake_fix.md
examples/: README.md  auto_racing_client.rs  binary_message_example.rs  client_example.rs  demo.sh  diagnose_websocket.rs  quic_client.rs  quic_server_example.rs  server_example.rs  websocket_client.rs  websocket_server_example.rs
scripts/: generate_certs.sh
src/: lib.rs
src/client/: callbacks.rs  config.rs  connection_manager.rs  message_manager.rs  mod.rs  protocol_racer.rs  quic_connector.rs  traits.rs  types.rs  websocket_connector.rs
src/common/: callback.rs  error.rs  events.rs  message_parser.rs  mod.rs  protocol.rs  tls.rs  traits.rs  types.rs
src/common/conn/: mod.rs  quic.rs  websocket.rs
src/server/: config.rs  core.rs  handlers.rs  message_center.rs  message_processor.rs  mod.rs  quic_server.rs  traits.rs  websocket_server.rs
src/server/conn_manager/: memory.rs  mod.rs
