[package]
name = "flare-core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <flare1522@163.com>"]
description = "Flare IM - 高性能、可扩展的即时通讯工具包"
license = "MIT"
repository = "https://github.com/flare152/flare-core"
keywords = ["im", "messaging", "quic", "websocket"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[lib]
name = "flare_core"
path = "src/lib.rs"

# 依赖项
[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "time", "macros", "signal"], optional = true }

# 网络协议
quinn = { version = "0.11", optional = true }
tokio-tungstenite = { version = "0.27.0", optional = true }
tungstenite = { version = "0.27.0", optional = true }

# TLS 支持
rustls = { version = "0.23", features = ["ring"], optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "1.0.2", optional = true }

# 序列化
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# 异步 trait
async-trait = { version = "0.1", optional = true }

# 错误处理
thiserror = { version = "2.0.12", optional = true }

# 工具库
uuid = { version = "1.0", features = ["v4"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
rand = { version = "0.9.2", optional = true }
base64 = { version = "0.22.1", optional = true }

# 日志
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# 其他
anyhow = { version = "1.0", optional = true }
url = { version = "2.4", optional = true }
futures-util = "0.3.31"

# WebAssembly 支持
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "WebSocket", "MessageEvent", "CloseEvent"] }

# 开发依赖
[dev-dependencies]
criterion = "0.7.0"
mockall = "0.13.1"

# Features 配置
[features]
default = ["client", "server", "common"]
client = ["tokio", "quinn", "tokio-tungstenite", "tungstenite", "rustls", "rustls-pemfile", "webpki-roots", "tracing-subscriber", "common"]
server = ["tokio", "quinn", "tokio-tungstenite", "tungstenite", "rustls", "rustls-pemfile", "webpki-roots", "tracing-subscriber", "common"]
common = ["serde", "serde_json", "async-trait", "thiserror", "uuid", "chrono", "tracing", "anyhow", "url", "rand", "base64"]
